# mecanum_wheel

./: CMakeLists.txt  README.md  kinematics.md  package.xml
docs/: mecanum_kinematics_report.md
launch/: display.launch.py  gazebo.launch.py
map/: my_world.world
mecanum_kinematics/: offline_test.py  package.xml  setup.cfg  setup.py
mecanum_kinematics/launch/: mecanum_kinematics.launch.py
mecanum_kinematics/mecanum_kinematics/: mecanum_kinematics_node.py
mecanum_kinematics/params/: mecanum_kinematics.yaml
meshes/: mecanum_wheel_left.stl  mecanum_wheel_right.stl
urdf/: mecanum_robot.xacro  mecanum_robot_gz.xacro
worlds/: empty_robot_world.sdf
